# br8niac

./: LICENSE  README.md  app.py  makefile.txt  pyproject.toml  requirements.txt
.cursor/: rules.json
docs/: api_services.md  architecture.md  cursor_setup_guide.md  index.md  structure.txt  structure_project.txt  tasks.json
src/br8niac/: config.py  constants.py
src/br8niac/api/: server.py
src/br8niac/components/: results_display.py  search_box.py
src/br8niac/pages/: home.py  search.py
src/br8niac/services/: ai_service.py
src/br8niac/utils/: session.py
tests/: conftest.py
tests/test_services/: test_ai_service.py
