[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local_ai_search"
version = "0.1.0"
description = "A local AI-powered search application using Streamlit"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "streamlit>=1.29.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=br8niac"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]

profile = "black"
multi_line_output = 3